--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://nathx.github.io/dnsh-biodiversity",
   "name": "use-mapbox-gl-js-with-react",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +12,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -23,5 +26,8 @@
     "not ie 11"
   ],
   "author": "Mapbox",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
